# caesar-commander

./: .gitignore  Cargo.toml  README.md  bundle.sh  spec.json
src/: file_pane.rs  main.rs
src/cli/: cli.rs
src/file_pane/: mod.rs  ui.rs
src/file_system/: file_mutator.rs  file_mutator_tests.rs  mod.rs  navigator.rs  watcher.rs
src/model/: focus_state.rs  mod.rs  pane_controls.rs  params.rs
src/ui/: mod.rs
src/ui/double_pane/: double_pane.rs  double_pane_view.rs  mod.rs
src/ui/file_pane/: container.rs  file_pane.rs  mod.rs  view.rs
src/ui/keyboard/: keyboard.rs
src/ui/pane_controls/: controls.rs  controls_view.rs
src/view/file_pane/: model.rs  ui.rs
src/views/: mod.rs
src/views/double_pane/: double_pane.rs  double_pane_view.rs
src/views/file_pane/: file_pane.rs  file_pane_view.rs  mod.rs  model.rs  ui.rs
src/views/pane_controls/: controls.rs  controls_view.rs  mod.rs
