[package]
name = "caesar-commander"
version = "0.1.0"
edition = "2024"
description = "Caesar Commander"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.32.0"
eframe = "0.32.0"
env_logger = "0.11.8"
log = "0.4.20"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3"

[package.metadata.bundle]
name = "CaesarCommander"
description = "Caesar Commander"
identifier = "me.benetis.caesar-commander"